bug: fix resize fb timeline on smallest screens to 90 percent

--- a/CSS/Order.css
+++ b/CSS/Order.css
@@ -14,7 +14,7 @@
 @media (max-width: 700px) {
     .fb-timeline {
         padding:0;
-        min-width: 100%;
+        min-width: 900%;
         width: 90%;
     }
     .fb-page{
